syntax = "proto3";
package sunrise.liquiditypool.v1;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/sunriselayer/sunrise/x/liquiditypool/types";

// TickInfo
message TickInfo {
  uint64 pool_id = 1;
  int64 tick_index = 2;
  string liquidity_gross = 3 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"liquidity_gross\"",
    (gogoproto.nullable) = false
  ];
  string liquidity_net = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"liquidity_net\"",
    (gogoproto.nullable) = false
  ];
  repeated cosmos.base.v1beta1.DecCoin fee_growth = 5 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false
  ];
}
